--- a/app/homepage.html
+++ b/app/homepage.html
@@ -259,7 +259,7 @@
 						</div>
 					</div>
 				</div>
-				<button type="button" data-dismiss="modal" class="close-modal" aria-label="Закрыть">
+				<button type="button" data-dismiss="modal" class="close-modal" aria-label="Close">
 					<svg width="24" height="24">
 						<line x1="0" y1="0" x2="24" y2="24"/>
 						<line x1="24" y1="0" x2="0" y2="24"/>
@@ -277,9 +277,9 @@
 	<div class="apanel__inner">
 		<!-- =close -->
 		<button type="button" data-dismiss="modal" class="close-menu" aria-label="Закрыть">
-			<svg width="24" height="24">
-				<line x1="0" y1="0" x2="24" y2="24"/>
-				<line x1="24" y1="0" x2="0" y2="24"/>
+			<svg width="22" height="22">
+				<line x1="0" y1="0" x2="22" y2="22"/>
+				<line x1="22" y1="0" x2="0" y2="22"/>
 			</svg>
 		</button>				
 		<!-- =/close -->
