--- a/app/homepage.html
+++ b/app/homepage.html
@@ -44,7 +44,7 @@
 		<header class="header">
 	    	<div class="container">
 	    		<div class="header__inner d-flex align-items-center">
-			    	<div class="col-4 col-lg-7 col-sm-6 d-flex align-items-center">
+			    	<div class="col-4 col-xl-8 col-lg-7 col-sm-6 d-flex align-items-center">
 				    	<div class="logo">
 				    		<a href="/"><img src="images/logo.png" alt="SB NAGAMOCHI" /></a>
 				    	</div>
@@ -62,10 +62,10 @@
 						</nav>
 						<!-- =/nav -->
 			    	</div>
-			    	<div class="col-4 col-lg-2 col-sm-3">
+			    	<div class="col-4 col-xl-1 col-lg-2 col-sm-3">
 						<button type="button" class="btn btn-blue btn-callback" data-toggle="sidemodal" data-target="#modal-callback">Call back</button>    		
 			    	</div>
-			    	<div class="col-1 col-lg-1 col-sm-1 d-flex justify-content-end">
+			    	<div class="col-1 col-xl-1 col-lg-1 col-sm-1 d-flex justify-content-end">
 						<button type="button" class="extra-toggle" data-popup="modal-menu" aria-label="Show / hide menu">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
