мелкие баги главной страницы

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -83,7 +83,7 @@
 					<h1 class="visually-hidden">Brake & Clutch Parts</h1>
 					<picture>
 						<source srcset="images/pic320.png" media="(max-width: 460px)">
-						<img srcset="images/pic.png" alt="" />						
+						<img src="images/pic.png" alt="" />						
 					</picture>
 					<p>The fastest must be <strong>brakes</strong>.</p>
 					<a href="#" class="btn btn-blue btn-learn-more">Learn more</a>
@@ -159,7 +159,8 @@
 		<form action="#" method="post" class="callback__form">
 			<fieldset>
 				<div class="select-wrapper">
-					<select name="reviewobject" class="reviewobject" id="selectreview" placeholder="Country">
+					<select name="reviewobject" class="reviewobject" id="selectreview">
+						<option value="">Country</option>
 						<option value="Autstralia">Autstralia</option>
 						<option value="Albania">Albania</option>
 						<option value="Angola">Angola</option>
