Почищен dwt шаблон

--- a/app/homepage.html
+++ b/app/homepage.html
@@ -27,9 +27,9 @@
 <script src="/outdatedbrowser/outdatedbrowser.min.js"></script>
 <script src="/outdatedbrowser/detect.js"></script>
 
-<!--[if IE]>
-	<link href="/css/styles-ie.css" rel="stylesheet" type="text/css" />
-<![endif]-->
+<!--[if !IE]><!-->
+<script>if(/*@cc_on!@*/false){document.documentElement.className+=' ie10';}</script>
+<!--<![endif]-->
 </head>
 <body>
 
