--- a/app/catalog.html
+++ b/app/catalog.html
@@ -24,7 +24,6 @@
 <link rel="stylesheet" href="/css/styles.min.css" />
 <script src="/js/libs.min.js"></script>
 
-
 <link rel="stylesheet" href="outdatedbrowser/outdatedbrowser.min.css" />
 <script src="/outdatedbrowser/outdatedbrowser.min.js"></script>
 <script src="/outdatedbrowser/detect.js"></script>
@@ -44,7 +43,7 @@
 		<header class="header">
 	    	<div class="container">
 	    		<div class="header__inner d-flex align-items-center">
-			    	<div class="col-4 col-lg-7 col-sm-6 d-flex align-items-center">
+			    	<div class="col-4 col-xl-8 col-lg-7 col-sm-6 d-flex align-items-center">
 				    	<div class="logo">
 				    		<a href="/"><img src="images/logo.png" alt="SB NAGAMOCHI" /></a>
 				    	</div>
@@ -62,10 +61,10 @@
 						</nav>
 						<!-- =/nav -->
 			    	</div>
-			    	<div class="col-4 col-lg-2 col-sm-3">
+			    	<div class="col-4 col-xl-1 col-lg-2 col-sm-3">
 						<button type="button" class="btn btn-blue btn-callback" data-toggle="sidemodal" data-target="#modal-callback">Call back</button>
 			    	</div>
-			    	<div class="col-1 col-lg-1 col-sm-1 d-flex justify-content-end">
+			    	<div class="col-2 col-xl-1 col-lg-1 col-sm-1 d-flex justify-content-end">
 						<button type="button" class="extra-toggle" data-popup="modal-menu" aria-label="Show / hide menu">
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
@@ -193,7 +192,8 @@
 		<form action="#" method="post" class="callback__form">
 			<fieldset>
 				<div class="select-wrapper">
-					<select name="reviewobject" class="reviewobject" id="selectreview" placeholder="Country">
+					<select name="reviewobject" class="reviewobject" id="selectreview">
+						<option value="">Country</option>
 						<option value="Autstralia">Autstralia</option>
 						<option value="Albania">Albania</option>
 						<option value="Angola">Angola</option>
@@ -293,7 +293,7 @@
 						</div>
 					</div>
 				</div>
-				<button type="button" data-dismiss="modal" class="close-modal" aria-label="Закрыть">
+				<button type="button" data-dismiss="modal" class="close-modal" aria-label="Close">
 					<svg width="24" height="24">
 						<line x1="0" y1="0" x2="24" y2="24"/>
 						<line x1="24" y1="0" x2="0" y2="24"/>
@@ -309,8 +309,8 @@
 <div id="outdated"></div>
 <script src="/js/slick.min.js"></script> 
 <script src="/js/selectize.min.js"></script>
-<script src="/js/jquery.nicescroll.min.js"></script>
 <script src="/js/engine.js"></script>
+
 <link rel="stylesheet" property="stylesheet" href="/css/selectize.css" />
 <!-- InstanceBeginEditable name="EditRegion4" -->
 
