Адаптирован список новостей

--- a/app/news.html
+++ b/app/news.html
@@ -101,7 +101,7 @@
 		<!-- InstanceBeginEditable name="EditRegion3" -->
 		<div class="main">
 			<div class="container">		
-				<section class="content col-offset-1">
+				<section class="content col-lg-offset-1">
 					<header>
 						<h1>NEWS</h1>						
 					</header>
