--- a/app/new.html
+++ b/app/new.html
@@ -101,9 +101,9 @@
 		<!-- InstanceBeginEditable name="EditRegion3" -->
 		<div class="main">
 			<div class="container">	
-				<div class="back col-offset-1"><a href="news.html" title="" class="back__link">Back</a></div>
-				<div class="d-flex">
-					<div class="content col-offset-1 col-5">
+				<div class="back col-xl-offset-1"><a href="news.html" title="" class="back__link">Back</a></div>
+				<div class="d-flex flex-wrap">
+					<div class="content col-xl-offset-1 col-10 col-xl-5 col-lg-6">
 						<main>
 							<h1>THE ATTACKS OF ROTORS AND SCORCHING PROCESS</h1>
 
@@ -155,51 +155,56 @@
 							<br>
 
 							<h3>RANGE OF FRICTION MATERIALS USED BY SB NAGAMOCHI BRAKE PADS INCLUDES:</h3>
-							<table width="100%">
-								<tr>
-									<th>C63</th>
-									<th>C02</th>
-									<th>C13</th>
-									<th>E3</th>
-									<th>M75</th>
-								</tr>
-								<tr>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Low metalic for small EURO cars</td>
-								</tr>
-								<tr>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Low metalic for small EURO cars</td>
-								</tr>
-							</table>
+
+							<div class="table-responsive">
+								<table width="100%">
+									<tr>
+										<th>C63</th>
+										<th>C02</th>
+										<th>C13</th>
+										<th>E3</th>
+										<th>M75</th>
+									</tr>
+									<tr>
+										<td>Ceramic for small cars</td>
+										<td>Ceramic for small cars</td>
+										<td>Ceramic for 4WD / Pick ups / Vans</td>
+										<td>Ceramic for 4WD / Pick ups / Vans</td>
+										<td>Low metalic for small EURO cars</td>
+									</tr>
+									<tr>
+										<td>Ceramic for small cars</td>
+										<td>Ceramic for small cars</td>
+										<td>Ceramic for 4WD / Pick ups / Vans</td>
+										<td>Ceramic for 4WD / Pick ups / Vans</td>
+										<td>Low metalic for small EURO cars</td>
+									</tr>
+								</table>
+							</div>
 
 							<h4>HEADLINE LEVEL 4</h4>
 							<blockquote>Some important information must be visible! Some important information must be visible! </blockquote>
 						</main>
 					</div>
-					<aside class="col-offset-1 col-3">
+					<aside class="col-lg-offset-1 col-10 col-lg-3">
 						<section class="more-list">
 							<header>
 								<h1>Read more</h1>
 							</header>
-							<article class="more__item">
-								<h3 class="more__title"><a href="#" title="">Tips on installation and brake pads rating</a></h3>
-								<p>Changing Brake Pads is simple. But there are some important considerations sometimes missed by installers.</p>
-							</article>
-							<article class="more__item">
-								<h3 class="more__title"><a href="#" title="">How to rate your new brake pads</a></h3>
-								<p>But there are some important considerations sometimes missed by installers.</p>
-							</article>
-							<article class="more__item">
-								<h3 class="more__title"><a href="#" title="">WHEN BRAKE PAD MEETS THE ROTOR</a></h3>
-								<p>The first mating process of rotor and pad surfaces play a vital role for their future life and performance. It’s also called BED-IN process.</p>
-							</article>
+							<div class="list__wrapper">
+								<article class="more__item">
+									<h3 class="more__title"><a href="#" title="">Tips on installation and brake pads rating</a></h3>
+									<p>Changing Brake Pads is simple. But there are some important considerations sometimes missed by installers.</p>
+								</article>
+								<article class="more__item">
+									<h3 class="more__title"><a href="#" title="">How to rate your new brake pads</a></h3>
+									<p>But there are some important considerations sometimes missed by installers.</p>
+								</article>
+								<article class="more__item">
+									<h3 class="more__title"><a href="#" title="">WHEN BRAKE PAD MEETS THE ROTOR</a></h3>
+									<p>The first mating process of rotor and pad surfaces play a vital role for their future life and performance. It’s also called BED-IN process.</p>
+								</article>
+							</div>
 						</section>
 					</aside>
 				</div>
