--- a/app/about.html
+++ b/app/about.html
@@ -102,14 +102,14 @@
 		<div class="main main-about">
 			<div class="bg">
 				<div class="container">
-					<div class="neck d-flex align-items-center col-offset-1">
+					<div class="neck d-flex align-items-center col-xl-offset-1">
 						<h1>ABOUT US</h1>						
 					</div>
 				</div>
 			</div>
 			<main>
 				<div class="container">	
-					<div class="col-offset-1">
+					<div class="col-offset-xl-1">
 						<div class="text">
 							<div class="head">SB Nagamochi</div>
 							<p class="subtitle">The fastest must be <span>brakes!</span></p>
@@ -144,7 +144,7 @@
 					<!-- =groups -->
 					<div class="groups text-center">
 						<h2 class="title text-center">5 GROUPS OF ITEMS</h2>
-						<div class="col-offset-1 col-8 d-flex flex-wrap justify-content-between">
+						<div class="groups__wrapper col-xl-offset-1 col-8 d-flex flex-wrap justify-content-between">
 							<div class="group__item">
 								<a href="#" class="group__link">
 									<div class="group__pic">
@@ -202,7 +202,7 @@
 				<!-- =principles -->
 				<div class="principles">
 					<div class="container">
-						<div class="col-offset-1 col-8">
+						<div class="col-10 col-lg-offset-1 col-lg-8">
 							<h2 class="title text-center">
 								Principles of production
 							</h2>
@@ -236,10 +236,10 @@
 				<div class="coverage">
 					<div class="container">
 						<h2 class="title text-center">MARKET COVERAGE </h2>
-						<div class="col-offset-1">
+						<div class="col-lg-offset-1">
 							<div class="coverage__row">
-								<div class="col-1 coverage__title">CALLIPER<br>KIT</div>
-								<div class="col-8">
+								<div class="col-10 col-xl-1 col-md-2 coverage__title">CALLIPER<br>KIT</div>
+								<div class="col-10 col-xl-8 col-md-8">
 									<div class="columns">
 										<div class="column column-color1" style="left: 0%;width: 90%"></div>
 										<div class="column column-color2" style="left: 90%;width: 3%"></div>
@@ -256,8 +256,8 @@
 								</div>
 							</div>
 							<div class="coverage__row">
-								<div class="col-1 coverage__title">Hoses</div>
-								<div class="col-8">
+								<div class="col-10 col-xl-1 col-md-2 coverage__title">Hoses</div>
+								<div class="col-10 col-xl-8 col-md-8">
 									<div class="columns">
 										<div class="column column-color1" style="left: 0%;width: 90%"></div>
 										<div class="column column-color2" style="left: 90%;width: 2%"></div>
@@ -274,8 +274,8 @@
 								</div>
 							</div>
 							<div class="coverage__row">
-								<div class="col-1 coverage__title">PADS <br> shoes</div>
-								<div class="col-8">
+								<div class="col-10 col-xl-1 col-md-2 coverage__title">PADS <br> shoes</div>
+								<div class="col-10 col-xl-8 col-md-8">
 									<div class="columns">
 										<div class="column column-color1" style="left: 0%;width: 43%"></div>
 										<div class="column column-color2" style="left: 43%;width: 35%"></div>
@@ -292,8 +292,8 @@
 								</div>
 							</div>
 							<div class="coverage__row">
-								<div class="col-1 coverage__title">Discs</div>
-								<div class="col-8">
+								<div class="col-10 col-xl-1 col-md-2 coverage__title">Discs</div>
+								<div class="col-10 col-xl-8 col-md-8">
 									<div class="columns">
 										<div class="column column-color1" style="left: 0%;width: 47%"></div>
 										<div class="column column-color2" style="left: 47%;width: 35%"></div>
@@ -310,8 +310,8 @@
 								</div>
 							</div>
 							<div class="coverage__row">
-								<div class="col-1 coverage__title">Cylinders</div>
-								<div class="col-8">
+								<div class="col-10 col-xl-1 col-md-2 coverage__title">Cylinders</div>
+								<div class="col-10 col-xl-8 col-md-8">
 									<div class="columns">
 										<div class="column column-color1" style="left: 0%;width: 96%"></div>
 										<div class="column column-color2" style="left: 96%;width: 1%"></div>
