--- a/app/contacts.html
+++ b/app/contacts.html
@@ -87,8 +87,8 @@
 		<!-- InstanceBeginEditable name="EditRegion3" -->
 		<div class="main main-contacts">
 			<div class="container">
-				<div class="d-flex w-100">
-					<div class="content col-offset-1 col-4">
+				<div class="d-flex flex-wrap w-100">
+					<div class="content col-xl-offset-1 col-10 col-xl-4 col-lg-5">
 						<main>
 							<h1>CONTACT US</h1>
 							<h3>RMP NAGAMOCHI TECHNOLOGY JAPAN CO., LTD.</h3>
@@ -107,7 +107,7 @@
 							</div>
 						</main>
 					</div>
-					<div class="col-offset-1 col-3">
+					<div class="col-xl-offset-1 col-10 col-xl-4 col-lg-5">
 						<form action="#" method="post" class="callback__form">
 							<fieldset>
 								<div class="select-wrapper">
