--- a/app/card.html
+++ b/app/card.html
@@ -83,7 +83,7 @@
 			<div class="secondary-nav">
 				<div class="container">
 					<div class="col-offset-1">
-						<ul class="d-flex">
+						<ul class="d-flex flex-wrap">
 							<li class="active"><span>Brake pads & shoes</span></li>
 							<li><a href="#" title="">Rotor discs</a></li>
 							<li><a href="#" title="">Cylinders</a></li>
@@ -103,7 +103,7 @@
 		<div class="main main-card">
 			<div class="bg">
 				<div class="container">
-					<div class="neck d-flex align-items-center col-offset-1">
+					<div class="neck d-flex align-items-center col-xl-offset-1">
 						<h1>BRAKE PADS & SHOES</h1>
 					</div>
 				</div>
@@ -112,40 +112,42 @@
 			<div class="container">
 				<div class="content">
 					<main>
-						<div class="top col-offset-1 col-8">
+						<div class="top col-xl-offset-1 col-10 col-xl-8">
 							<h3>Range of friction materials used by SB Nagamochi brake pads includes:</h3>
-							<table width="100%">
-								<tr>
-									<th>C63</th>
-									<th>C02</th>
-									<th>C13</th>
-									<th>E3</th>
-									<th>M75</th>
-									<th>M76</th>
-									<th>M73</th>
-									<th>MS1</th>
-								</tr>
-								<tr>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for small cars</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Ceramic for 4WD / Pick ups / Vans</td>
-									<td>Low metalic for small EURO cars</td>
-									<td>Low metalic for 4WD / Pick ups / Vans</td>
-									<td>Carbon metallic for EURO cars</td>
-									<td>Performance formula</td>
-								</tr>
-							</table>
+							<div class="table-responsive">
+								<table width="100%">
+									<tr>
+										<th>C63</th>
+										<th>C02</th>
+										<th>C13</th>
+										<th>E3</th>
+										<th>M75</th>
+										<th>M76</th>
+										<th>M73</th>
+										<th>MS1</th>
+									</tr>
+									<tr>
+										<td>Ceramic for small cars</td>
+										<td>Ceramic for small cars</td>
+										<td>Ceramic for 4WD / Pick ups / Vans</td>
+										<td>Ceramic for 4WD / Pick ups / Vans</td>
+										<td>Low metalic for small EURO cars</td>
+										<td>Low metalic for 4WD / Pick ups / Vans</td>
+										<td>Carbon metallic for EURO cars</td>
+										<td>Performance formula</td>
+									</tr>
+								</table>
+							</div>
 						</div>
 
 						<div class="text">
-							<div class="row row-pic-left">
-								<div class="col-4">
+							<div class="flex-wrap row row-pic-left">
+								<div class="col-10 col-xl-4 col-md-3">
 									<div class="pic pic-shadow pic-shadow-right">
 										<img src="/tmp/card-1.jpg" alt="" />
 									</div>
 								</div>
-								<div class="col-5">
+								<div class="col-10 col-xl-5 col-md-7">
 									<div class="description">
 										<h2 class="title">BRAKE PADS</h2 class="title">
 										<p>Non Asbestos Organic, Non-abrasive Semi and Low Metallic plus several types of Ceramic materials with different additives and unique production processes are used in production range. All the above materials are environmentally friendly - with lowest brake dust levels to protect the environment and keep your rims free of unsightly brake dust. The friction class by LINK dynamic test for all formulations is from “F” to “H”. It guarantees drivers highest road safety with high resistance to FADE (brake power loss in extreme situation). The extensive range of options guarantees comfortable and effective brake filing for each different car and driving style and ensure safety on road and long life of brake rotor.</p>
@@ -153,27 +155,27 @@
 								</div>
 							</div>
 
-							<div class="row row-pic-right">
-								<div class="col-5 col-offset-1">
+							<div class="flex-wrap row row-pic-right">
+								<div class="col-10 col-xl-5 col-md-7 col-lg-offset-1">
 									<div class="description">
 										<h2 class="title">Brake Shoes for <br>Passenger cars</h2 class="title">
 										<p>Organic and non-ferrous fibres formulation specially designed to provide safe and comfortable drive for passenger vehicles. It is an ultra-quiet, low dust and long lasting material. It is gentle on brake drums and has a stable coefficient of friction over a wide range of temperatures and speeds. It is well known for its qualities of smooth progressive brake and great safety in extreme braking.</p>
 									</div>
 								</div>
-								<div class="col-4 d-flex justify-content-end">
+								<div class="col-10 col-xl-4 col-md-3 d-flex justify-content-end">
 									<div class="pic pic-shadow pic-shadow-left">
 										<img src="/tmp/card-2.jpg" alt="" />
 									</div>
 								</div>
 							</div>
 
-							<div class="row row-pic-right">
-								<div class="col-4">
+							<div class="flex-wrap row row-pic-left">
+								<div class="col-10 col-xl-4 col-md-3">
 									<div class="pic pic-shadow pic-shadow-right">
 										<img src="/tmp/card-3.jpg" alt="" />
 									</div>
 								</div>
-								<div class="col-5">
+								<div class="col-10 col-xl-5 col-md-7">
 									<div class="description">
 										<h2 class="title">Brake Shoes for trucks <br> and buses</h2 class="title">
 										<p>The unique combination of Mineral Wool and Metallic fibre. It’s also contains brass, acrylic and glass fibres blended with good structural integrity. This formula perfectly suits air brake systems used in commercial vehicles. It has excellent heat stability and is designed to work with great radial and tangential loads. It is gentle on the mating surface and consistent in performance over a wide range of cycles.</p>
