--- a/app/homepage.html
+++ b/app/homepage.html
@@ -44,7 +44,7 @@
 				    	<div class="logo">
 				    		<a href="/">
 								<picture>
-									<source srcset="images/logo.webp" alt="" type="image/webp" >
+									<source srcset="images/logo.webp" type="image/webp" >
 									<img src="images/logo.png" alt="SB NAGAMOCHI" />
 								</picture>
 							</a>
