--- a/app/new.html
+++ b/app/new.html
@@ -77,8 +77,8 @@
 			<!-- =secondary-nav -->
 			<div class="secondary-nav">
 				<div class="container">
-					<div class="col-offset-1">
-						<ul class="d-flex">
+					<div class="col-xl-offset-1">
+						<ul class="d-flex justify-content-around">
 							<li><a href="#" title="">About Us</a></li>
 							<li><a href="#" title="">Materials & Technologies</a></li>
 							<li><a href="#" title="">Certificates & Warranty</a></li>
