--- a/app/about.html
+++ b/app/about.html
@@ -77,8 +77,8 @@
 			<!-- =secondary-nav -->
 			<div class="secondary-nav">
 				<div class="container">
-					<div class="col-offset-1">
-						<ul class="d-flex">
+					<div class="col-xl-offset-1">
+						<ul class="d-flex flex-wrap">
 							<li class="active"><span>About Us</span></li>
 							<li><a href="#" title="">Materials & Technologies</a></li>
 							<li><a href="#" title="">Certificates & Warranty</a></li>
