--- a/app/card.html
+++ b/app/card.html
@@ -77,7 +77,7 @@
 			<!-- =secondary-nav -->
 			<div class="secondary-nav">
 				<div class="container">
-					<div class="col-offset-1">
+					<div class="col-xl-offset-1">
 						<ul class="d-flex flex-wrap">
 							<li class="active"><span>Brake pads & shoes</span></li>
 							<li><a href="#" title="">Rotor discs</a></li>
