--- a/app/card.html
+++ b/app/card.html
@@ -22,6 +22,7 @@
 <title>Card</title>
 <!-- InstanceEndEditable -->
 <link rel="stylesheet" href="/css/styles.min.css" />
+<script src="/js/modernizr-custom-webp.js"></script>
 <script src="/js/libs.min.js"></script>
 
 <link rel="stylesheet" href="outdatedbrowser/outdatedbrowser.min.css" />
