Включены картинки в карточке на адаптиве

--- a/app/card.html
+++ b/app/card.html
@@ -138,12 +138,12 @@
 
 						<div class="text">
 							<div class="flex-wrap row row-pic-left">
-								<div class="col-10 col-xl-4 col-md-3">
+								<div class="col-10 col-xl-4 col-lg-3">
 									<div class="pic pic-shadow pic-shadow-right">
 										<img src="/tmp/card-1.jpg" alt="" />
 									</div>
 								</div>
-								<div class="col-10 col-xl-5 col-md-7">
+								<div class="col-10 col-xl-5 col-lg-7">
 									<div class="description">
 										<h2 class="title">BRAKE PADS</h2>
 										<p>Non Asbestos Organic, Non-abrasive Semi and Low Metallic plus several types of Ceramic materials with different additives and unique production processes are used in production range. All the above materials are environmentally friendly - with lowest brake dust levels to protect the environment and keep your rims free of unsightly brake dust. The friction class by LINK dynamic test for all formulations is from “F” to “H”. It guarantees drivers highest road safety with high resistance to FADE (brake power loss in extreme situation). The extensive range of options guarantees comfortable and effective brake filing for each different car and driving style and ensure safety on road and long life of brake rotor.</p>
@@ -152,13 +152,13 @@
 							</div>
 
 							<div class="flex-wrap row row-pic-right">
-								<div class="col-10 col-xl-5 col-md-7 col-lg-offset-1">
+								<div class="col-10 col-xl-5 col-lg-7 col-lg-offset-1">
 									<div class="description">
 										<h2 class="title">Brake Shoes for <br>Passenger cars</h2>
 										<p>Organic and non-ferrous fibres formulation specially designed to provide safe and comfortable drive for passenger vehicles. It is an ultra-quiet, low dust and long lasting material. It is gentle on brake drums and has a stable coefficient of friction over a wide range of temperatures and speeds. It is well known for its qualities of smooth progressive brake and great safety in extreme braking.</p>
 									</div>
 								</div>
-								<div class="col-10 col-xl-4 col-md-3 d-flex justify-content-end">
+								<div class="col-10 col-xl-4 col-lg-3 d-flex justify-content-end">
 									<div class="pic pic-shadow pic-shadow-left">
 										<img src="/tmp/card-2.jpg" alt="" />
 									</div>
@@ -166,12 +166,12 @@
 							</div>
 
 							<div class="flex-wrap row row-pic-left">
-								<div class="col-10 col-xl-4 col-md-3">
+								<div class="col-10 col-xl-4 col-lg-3">
 									<div class="pic pic-shadow pic-shadow-right">
 										<img src="/tmp/card-3.jpg" alt="" />
 									</div>
 								</div>
-								<div class="col-10 col-xl-5 col-md-7">
+								<div class="col-10 col-xl-5 col-lg-7">
 									<div class="description">
 										<h2 class="title">Brake Shoes for trucks <br> and buses</h2>
 										<p>The unique combination of Mineral Wool and Metallic fibre. It’s also contains brass, acrylic and glass fibres blended with good structural integrity. This formula perfectly suits air brake systems used in commercial vehicles. It has excellent heat stability and is designed to work with great radial and tangential loads. It is gentle on the mating surface and consistent in performance over a wide range of cycles.</p>
